Update video control panel doesn't show up

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,36 @@
 .custom-card {
   background-image: url("./cardBg.png");
 }
+
+video::-webkit-media-controls-start-playback-button {
+  display: none;
+}
+
+video::-webkit-media-controls-panel {
+  display: none !important;
+  opacity: 1 !important;
+}
+
+video {
+  pointer-events: none;
+}
+
+video::-webkit-media-controls {
+  display: none;
+}
+
+/* Could Use thise as well for Individual Controls */
+video::-webkit-media-controls-play-button {
+}
+
+video::-webkit-media-controls-volume-slider {
+}
+
+video::-webkit-media-controls-mute-button {
+}
+
+video::-webkit-media-controls-timeline {
+}
+
+video::-webkit-media-controls-current-time-display {
+}
