--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   font-style: normal;
 }
 
+body {
+  overscroll-behavior: none;
+}
+
 .custom-card {
   background-image: url("./cardBg.png");
 }
